# MPPI_CUDA

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: drone_dynamics.cuh  helper.h  mppi_solver.cuh
src/: mppi_solver.cu  test.cpp
